--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,4 @@
 @tailwind components;
 @tailwind utilities;
 
-.text-gradient { @apply text-transparent bg-clip-text bg-gradient-to-r from-orange-400 to-rose-900 }
+.text-gradient { @apply text-transparent bg-clip-text bg-gradient-to-r from-gradientStart to-gradientEnd }
